# gimlight

./: .gitignore  .gitmodules  .hlint.yaml  CHANGELOG.md  CONTRIBUTING.md  Core.hs  README.md  Setup.hs  _CoqProject  cabal.project.freeze  core.opam  dune-project  formatter.sh  gimlight.cabal  gimlight.opam  gimlight.opam.locked  package.yaml  pr_kei.hs  roguelike.cabal  stack.yaml  weeder.toml
.github/workflows/: ci.yaml  ci.yml  haskell.yml
.github/workflows/cabal-install/: action.yaml
.github/workflows/install-coq/: action.yaml
.github/workflows/install-stan/: action.yaml
app/: Actions.hs  Dungeon.hs  Engine.hs  Entity.hs  Log.hs  Main.hs  UI.hs
app/Dungeon/: Generate.hs  Predefined.hs  Types.hs
app/Dungeon/Map/: Fov.hs
app/Entity/: Behavior.hs  Friendly.hs  Monsters.hs
app/Map/: Fov.hs  Predefined.hs  Tile.hs
app/UI/: Draw.hs  Event.hs  Types.hs
app/UI/Draw/: Map.hs
extraction/: Extraction.v  dune
images/: book.edg  cave_floor.edg  herb.edg  map_tiles.xcf  stairs.edg  sword.edg
images/items/: book.edg
images/tiles/: dark_sea.kra  grass.kra  mountains.kra  path.edg  path.json  sandy_beach.kra  sea.kra  shallow_sea.kra  white_wall.kra
images/upper_body/electria/: electria.kra
images/walking_pictures/: Darnah.edg  Darnah.kra  bee.kra
lib/: Gimlight.v  dune
logic/: gimlight-logic.cabal  package.yaml
logic-core/: Extraction.v  GimlightLogicCore.hs  Setup.hs  _CoqProject  gimlight-logic-core.cabal  package.yaml
logic-core/Gimlight/Logic/: GameModel.v
logic-core/src/: Extraction.v  GameModel.v  GimlightLogicCore.hs  _CoqProject
logic/Gimlight/: UI.hs
logic/Gimlight/Logic/: GameModel.hs
maps/: beaeve.json  beaeve.xml  global_map.json  global_map.xml  map_tiles.xml  tiles.xml
src/: Action.hs  Actor.hs  Dungeon.hs  Engine.hs  Game.hs  GameModel.hs  GameStatus.hs  IndexGenerator.hs  Lib.hs  Localization.hs  Main.hs  NpcBehavior.hs  Player.hs  Quest.hs  Talking.hs  TreeZipper.hs
src/Action/: Drop.hs  Move.hs
src/Actor/: NpcBehavior.hs
src/Dungeon/: Actor.hs  Generate.hs  Init.hs  Item.hs  Stairs.hs  Types.hs
src/Game/: Config.hs  Status.hs
src/GameStatus/: Exploring.hs  Player.hs  Talking.hs
src/Gimlight/: Action.hs  Actor.hs  Coord.hs  Direction.hs  Dungeon.hs  Err.hs  Fov.hs  Game.hs  GameConfig.hs  GameModel.hs  GameStatus.hs  IndexGenerator.hs  Inventory.hs  Item.hs  Localization.hs  Log.hs  NpcBehavior.hs  Player.hs  Prelude.hs  Quest.hs  TreeZipper.hs  UI.hs
src/Localization/: Texts.hs
src/Quest/: KillBats.hs
src/UI/: Draw.hs  Event.hs  Graphics.hs  Types.hs
src/core/: Component_player.v  README.md
src/extraction/: Extraction.v  dune
src/kernel/: GameModel.v
src/lib/Extraction/: Extraction.v  dune
src/lib/Kernel/Extraction/: Extraction.v  dune
src/wrapper/: dune  game_model.ml  game_model.mli
test/: Spec.hs
tests/: FovSpec.hs  Main.hs  SetUp.hs
tests/Action/: ConsumeSpec.hs  DropSpec.hs  MeleeSpec.hs  MoveSpec.hs  PickUpSpec.hs  WaitSpec.hs
tests/Dungeon/: GenerateSpec.hs
tests/Gimlight/: ActionSpec.hs  ActorSpec.hs  FovSpec.hs  Generator.hs  ItemSpec.hs
tests/SetUp/: Dungeon.hs  ImageFile.hs  MapFile.hs  TileFile.hs
tests/map_files/: rotation.json
tests/maps/: multiple_tile_files.json  not_square.json  rotation.json  single_tile.json  three_layers.json  transform_and_rotation.json
tests/tiles/: generate.json  haskell.json  no_properties.json  sea.json  separated_0.json  single.json  united.json  unwalkable.json
tiles/: README.md  cave.json  dark_sea.json  grass.json  path.json  sandy_beach.json  shallow_sea.json  stairs.json  tiles.json  white_wall.json  wooden_floor.json
wrapper/: dune  game_model.ml  game_model.mli
(+246 files in other folders)
