(library
 (name gimlight)
 (libraries controller zarith))

(coq.extraction
 (prelude Extraction)
 (extracted_modules
  BinNat
  EventHandler
  FixedSizeArray
  GameInitializationUsecase
  IO
  Main
  Map
  MapStore
  MapRepository
  Run)
 (theories Controller Coquill GameLogic Main RAMStore Repository Usecase))

(env
 (dev
  (flags
   (:standard -w -a))))
