(library
 (name gimlight)
 (libraries controller zarith))

(coq.extraction
 (prelude Extraction)
 (extracted_modules
  BinNat
  EventHandler
  FixedSizeArray
  GameInitializationUsecase
  GameInitializationUsecaseImpl
  IO
  Main
  Map
  MapRepository
  MapStore
  Run)
 (theories
  Controller
  Coquill
  GameLogic
  Main
  RAMStore
  Repository
  Usecase
  UsecaseImpl))

(env
 (dev
  (flags
   (:standard -w -a))))
