(library
 (name kernel)
 (public_name gimlight.kernel)
 (libraries zarith))

(coq.extraction
 (prelude Extraction)
 (extracted_modules
  BinNat
  FixedSizeArray
  GameInitializationUsecase
  Map
  MapRepository)
 (theories Coquill Entity Repository Usecase))

(env
 (dev
  (flags
   (:standard -w -a))))
